fixed navbar on mobile

--- a/style.css
+++ b/style.css
@@ -279,7 +279,7 @@ h3.date {
         float: right;
         color: #d8d8d8;
         font-family: "Source Sans Pro";
-        margin: 14px 15px 0px 14px;
+        margin: 20px 15px 0px 14px;
         font-size: 22px;
         display: none;
         animation: slidein-menu 0.2s forwards;
